# carnatify

./: .gitignore  AGENT_LOG.md  ARCHITECTURE.md  BRAINSTORM_COMPANY.md  CODEX_REVIEW.md  COVERHUNTER_RESCORE.md  DEPLOY.md  HANDOFF.md  HANDOFF_CLIP_ID.md  HANDOFF_RAGA_DATA.md  HANDOFF_SESSION_0712.md  HANDOFF_SESSION_0718.md  HANDOFF_SESSION_0719.md  HANDOFF_SESSION_0719B.md  HANDOFF_SESSION_0721.md  HANDOFF_SESSION_0722.md  HANDOFF_VERFIER.md  METRIC_CONTRACT.md  OPEN_DECISIONS.md  README.md  REVIEW_BRIEF.md  app.py  augment_wild.py  build_catalog.py  build_cnn_extra_audio.py  build_composition_registry.py  build_pending_extraction.py  build_qmax_catalog.py  build_wild_truth_manifest.py  carnatify_prd.md  colab_asr_sprint.py  colab_extract_features.ipynb  colab_extract_features_v2.ipynb  colab_indic_asr.py  colab_train_cnn.ipynb  download_archive_direct.py  download_concerts.py  download_targeted_deficits.py  download_title_join.py  evaluate_composition_shortclip.py  (+33 more)
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  build_space.sh  clip_identify.py  main.py  precompute_tracks.py  requirements.txt
data/: asr_cache_indic.json  asr_cache_v2.json  catalog_titles.txt  composition_registry.json  karnatik_link_overrides.json  karnatik_songs.json  lyrics.db  pending_extraction.json  raga_aliases.json  raga_model_classes.txt  registry_junk_blocklist_DRAFT.md  rung2_coverage_report.md  scraped_compositions.json  v3_only_titles.txt  whisper_transcripts_turbo.json  whisper_transcripts_turbo_stems.json  wild_truth_manifest.json
eval/: policy_v2.py  score_gpu_variants.py  transcripts_gpu.json
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
models/: composition_catalog.npz  composition_catalog_meta.json  qmax_catalog.npz  qmax_catalog_meta.json  raga_clip_meta.json  raga_label_encoder.pkl  raga_v3_label_encoder.pkl  raga_v3_meta.json
scratch_archive_0711/: comp_e2e_short.py  comp_e2e_short2.py  comp_ensemble.py  comp_experiment.py  comp_experiment2.py  comp_experiment3.py  comp_experiment4.py  comp_external_eval.py  comp_external_eval2.py  comp_external_eval3.py  comp_fusion.py  comp_gated_short.py  comp_sweep.py  (+26 more)
(+70 files in other folders)
