[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "carnatify"
version = "0.1.0"
description = "Carnatic music identification and enrichment: composition matching, raga classification, tala detection, and lyrics display"
requires-python = ">=3.10"
dependencies = [
    "essentia>=2.1b6",
    "librosa>=0.10.0",
    "mirdata>=0.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "dtaidistance>=2.3.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.28.0",
    "anthropic>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "soundfile>=0.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
