[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carnatify"
version = "0.1.0"
description = "Carnatic music identification and enrichment: composition matching, raga classification, tala detection, and lyrics display"
requires-python = ">=3.11"
dependencies = [
    "essentia>=2.1b6",
    "librosa>=0.10.0",
    "mirdata>=0.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.2.0,<2.6",
    "torchaudio>=2.2.0,<2.6",
    "demucs>=4.0.0",
    "dtaidistance>=2.3.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "streamlit>=1.28.0",
    "google-generativeai>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "soundfile>=0.12.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
